# alens-pricedl

./: .env.sample  .mcp.json  README.md  main.py  pyproject.toml
.serena/: project.yml
pricedb/: cli.py  config.py  init.py  price_flat_file.py  quote.py
pricedb/quotes/: yahoo_finance_downloader.py  yfinance_downloader.py
pricedl/: __init__.py  cli.py  config.py  direct_dl.py  init.py  model.py  price_flat_file.py  quote.py  yahoo_finance_downloader.py
pricedl/beanprice/: vanguard_au_detail.py
pricedl/quotes/: ecb.py  fixerio.py  vanguard_au.py  vanguard_au_2023_detail.py  yfinance.py  yfinance_downloader.py
src/alens/pricedl/: config.py  direct_dl.py  main.py  model.py  price_flat_file.py  quote.py
src/alens/pricedl/beanprice/: vanguard_au_detail.py  yahoo.py
src/alens/pricedl/quotes/: ecb.py  fixerio.py  vanguard_au.py  vanguard_au_2023_detail.py  yfinance.py
src/pricedl/beanprice/: vanguard_au_detail.py  yahoo.py
tests/: test_beanprice.py  test_beanprice_vanguard.py  test_beanprice_yahoo.py  test_config.py  test_direct_dl.py  test_dl.py  test_ecb.py  test_flat_file.py  test_vanguard_downloader.py  test_yahoo.py  test_yf.py
