[project]
name = "pricedb-python"
version = "0.1.0"
description = "Commodity price retrieval, storage, and export in format compatible with Plain-Text Accounting applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
pricedb = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
