[project]
name = "as-price-download"
version = "0.1.0"
description = "Commodity price retrieval, storage, and export in format compatible with Plain-Text Accounting applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "loguru>=0.7.3",
]

[project.scripts]
# pricedl = "main:main"
pricedl = "pricedl.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

# Adding a build system causes the package itself to be installed in the .venv,
# and not just the dependencies.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
# artifacts = [
#   "*.py",
# ]
# Include subfolder pricedb in the distribution package.
packages = ["pricedb"]

#tool.uv.package = true
